/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 John Peachey
 */

@startuml
'https://plantuml.com/class-diagram


App o-- WebsiteCentral
App o-- FileCentral


class App {
    userInput()
    outputCreator()
}

class WebsiteCentral{
    websiteCreator()
}

class FileCentral{
    directoryMaker()
    fileMaker()
    subDirectoryMaker()
}


@enduml